changes to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=jwt
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/expense_tracker?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Admin@1234
+spring.datasource.password=rFLGWvcPNlnVdEsuDSRCYWRfJIYYGqxJ
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 
